--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ itsdangerous==2.1.2
 click==8.1.7
 gunicorn==21.2.0
 openpyxl==3.1.2
+python-dotenv==1.0.0
+bcrypt==4.0.1
+PyJWT==2.8.0
+cryptography==41.0.7
+Flask-Limiter==3.5.0
+flask-cors==4.0.0
